# kanby

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  demo_data.json  pyproject.toml  quick_start.py  test_ctrlc.py  test_kanby.py  test_manual.md  test_modal_navigation.py  test_move_demo.py  test_persistence.py  test_project_features.py  test_projects.json
kanby/: __init__.py  async_save.py  main.py  message_system.py
kanby-dev/: pyvenv.cfg
scripts/: build.py  dev_workflow_demo.sh
tests/: README.md  __init__.py  test_combined_features_demo.py  test_compact_demo.py  test_compact_priority.py  test_ctrlc.py  test_empty_column_demo.py  test_empty_column_positioning.py  test_kanby.py  test_left_margin.py  test_left_margin_demo.py  test_modal_navigation.py  test_move_demo.py  test_performance.py  test_persistence.py  test_project_features.py  test_project_rename.py  test_rename_demo.py  test_scroll_data.json  test_scroll_demo.py  test_scroll_indicators.py  test_selection_overflow_demo.py  test_selection_overflow_fix.py
