[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanby"
version = "1.0.21"
authors = [
    {name = "Vlad Arbatov", email = "vlad@arbatov.dev"},
]
description = "A beautiful terminal-based Kanban board"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "windows-curses; sys_platform == 'win32'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
keywords = ["kanban", "terminal", "productivity", "todo", "curses", "cli"]

[project.urls]
Homepage = "https://github.com/vladzima/kanby"
Repository = "https://github.com/vladzima/kanby"
Issues = "https://github.com/vladzima/kanby/issues"

[project.scripts]
kanby = "kanby.main:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kanby*"]
